/* Qaar kamida wadmada Xidhiidhka ay lawadaagto */

--- a/Xidhiidhka_Dibada_ee_Somaliland.mw
+++ b/Xidhiidhka_Dibada_ee_Somaliland.mw
@@ -6,17 +6,13 @@ wasaarada Arimaha dibada Ee somaliland waxa ay dublumaasiyiin iyo Safiiro joogto
 somaliland waxaay xidhiidh saaxiibtinimo oo soojireena la wadaagtaa wadamo badan oo caalamka kamida sida:
 
 * [[File:Flag of Ethiopia.svg|25px]] [[Itoobiya]]
-* [[File:Flag of Djibouti.svg|25px]] [[Jabuuti]]
 * [[File:Flag of the United Kingdom.svg|25px]] [[Midowga boqortooyada Britan]]
 * [[File:Flag of France.svg|25px]] [[Faransiiska]]
 * [[File:Flag of South Africa.svg|25px|]] [[Koonfur Afrika]]
 * [[File:Flag of Sweden.svg||25px]] [[Iswiidhan]]
+* [[File:Flag of the Republic of China.svg|25px]] [[Taipei]]
 * [[File:Flag of Italy.svg|25px]] [[Taliyaani]]
 * [[File:Flag of the United States (Pantone).svg|25px|]] [[Maraykanka]]
-koonfur sudan[[File:
-<gallery>
-Example.jpg
-</gallery>]] 
 
 == Baasaaboorka Somaliland ==
 Somaliland waxa ay leedahay baasaaboor lagu tago meelo badan oo caalamka kamida.waxaana ka mida wadamada lagu tagi karo Ethiopia.britain.jabouti. etc.
