--- a/Xidhiidhka_Dibada_ee_Somaliland.mw
+++ b/Xidhiidhka_Dibada_ee_Somaliland.mw
@@ -15,6 +15,6 @@ somaliland waxaay xidhiidh saaxiibtinimo oo soojireena la wadaagtaa wadamo badan
 * [[File:Flag of the United States (Pantone).svg|25px|]] [[Maraykanka]]
 
 == Baasaaboorka Somaliland ==
-Somaliland waxa ay leedahay baasaaboor lagu tago meelo badan oo caalamka kamida.waxaana ka mida wadamada lagu tagi karo Ethiopia.britain.jabouti. etc.
+Somaliland waxa ay leedahay baasaaboor lagu tago meelo badan oo caalamka kamida, waxaana ka mida wadamada lagu tagi karo [[Ethiopia]].Britain.Jabouti.[[Taiwan]]. etc.
 
 [[Category:Xukuumada Somaliland]]
