*Empty MediaWiki Message*

--- a/Xidhiidhka_Dibada_ee_Somaliland.mw
+++ b/Xidhiidhka_Dibada_ee_Somaliland.mw
@@ -1,20 +1,24 @@
 {{Siyaasadda Somaliland}}
 
 '''Xidhiidhka Dibada ee Somaliland''' Waa mid aad iyo aad u fiican oo ku xidhan kala danbayn iyo saaxiibtinimo. Dawlada somaliland waxa ay Xidhiidh la leedaha dawlado badan oo caalmka katirsan in kasta oo aysan wax Ictiraafa wali helin hadana waxa ay mutaysatay in ay samaysato saaxiibtinimo qadarin mudan.
-wasaarada Arimaha dibada Ee somaliland waxa ay dublumaasiyiin iyo Safiiro joogto ah ku leedahay dawlado badan oo caalmk akatirsan. dawlada somaliland waxa ay Xidhiidh gaar ah oo aad iyo aad u fiican la leedaha sida wadamada Midawga Yurub, Jaamcada carabta, Ururka Midawga Afrika, iyo Hay'ado iyo ururo dulumaasiyadeed oo aad ubadan.
+wasaarada Arimaha dibada Ee somaliland waxa ay dublumaasiyiin iyo Safiiro joogto ah ku leedahay dawlado badan oo caalmk akatirsan. dawlada somaliland waxa ay Xidhiidh gaar ah oo aad iyo aad u fiican la leedaha sida wadamada Midawga Yurub, Jaamcada carabta, Ururka Midawga Afrika, iyo Hay'ado iyo ururo dulumaasiyadeed oo aad ubadan. Taywan waxay u aqoonsan tahay Somaliland inay tahay wadan madaxbanaan.<ref>{{cite web|url= https://www.nytimes.com/reuters/2020/07/01/world/africa/01reuters-taiwan-somaliland.html |title= Outflanked by China in Africa, Taiwan Eyes Unrecognised Somaliland |website= The New York Times  |language=en|access-date=1 July 2020}}</ref>
+
 == Qaar kamida wadmada Xidhiidhka ay lawadaagto ==
 somaliland waxaay xidhiidh saaxiibtinimo oo soojireena la wadaagtaa wadamo badan oo caalamka kamida sida:
 
-* [[File:Flag of Ethiopia.svg|25px]] [[Itoobiya]]
-* [[File:Flag of the United Kingdom.svg|25px]] [[Midowga boqortooyada Britan]]
+* [[File:Flag of Ethiopia.svg|25px]] [[Itoobiya]]<ref>[http://www.somalilandgov.com/contacts.htm Contacts and addresses of the Somaliland Representative Offices around the world]</ref>
+* [[File:Flag of the United Kingdom.svg|25px]] [[Midowga boqortooyada Britan]]<ref>[https://www.somaliland-mission.com/ Somaliland Mission UK] Retrieved 2020-06-25. </ref>
 * [[File:Flag of France.svg|25px]] [[Faransiiska]]
 * [[File:Flag of South Africa.svg|25px|]] [[Koonfur Afrika]]
 * [[File:Flag of Sweden.svg||25px]] [[Iswiidhan]]
-* [[File:Flag of the Republic of China.svg|25px]] [[Taipei]]
+* [[File:Flag of the Republic of China.svg|25px]] [[Taywan]]<ref>{{cite web|url= https://www.mofa.gov.tw/News_Content_M_2.aspx?n=8742DCE7A2A28761&s=2FF8BD1C90C68576 |title= 我國宣布將與索馬利蘭共和國互設代表處 |website= 中華民國外交部  |language=zh-tw|access-date=1 July 2020}}</ref>
 * [[File:Flag of Italy.svg|25px]] [[Taliyaani]]
 * [[File:Flag of the United States (Pantone).svg|25px|]] [[Maraykanka]]
 
 == Baasaaboorka Somaliland ==
-Somaliland waxa ay leedahay baasaaboor lagu tago meelo badan oo caalamka kamida, waxaana ka mida wadamada lagu tagi karo [[Ethiopia]].Britain.Jabouti.[[Taiwan]]. etc.
+Somaliland waxa ay leedahay baasaaboor lagu tago meelo badan oo caalamka kamida, waxaana ka mida wadamada lagu tagi karo Itoobiya.Britain.Jabouti.Taywan. etc.
+
+==Tixraac==
+{{reflist|2}}
 
 [[Category:Xukuumada Somaliland]]
