*Empty MediaWiki Message*

--- a/Musuqmaasaq.mw
+++ b/Musuqmaasaq.mw
@@ -1,4 +1,5 @@
 [[File:Transparency international 2014.png|thumb|maabka aduunka oo muujinaya wadanada caalamka iyo qiyaasta daacadnimada (cadaalada) ee dalalkaasi. Kuwa ugu daacadnimada badan waxaa lagu muujiyay midabka ''buluuga'', halka kuwa ugu musuqmaasuqa badan lagu muujiyay midabka casaanka.]]
+[[File:UNCAC 1.png|thumb|left|]]
 '''Musuqmaasuq''' ({{lang-en|corruption}}; {{lang-ar|فساد سياسى}}) waa nidaamka oo maamul xun iyo been leh kooxda dowladda ama xukumaad ama rasmiga awood leh.
 Guud ahaan, musuqmaasaqu waa cadaalad daro iyo daacadnimo la'aan uu qof maamul haya ku doorsado lacag, kharash ama balanqaad iyo dane kale oo shakhsi ahaan ah.
 
