--- a/Liberalinimo.mw
+++ b/Liberalinimo.mw
@@ -1,13 +1,14 @@
+=== Liberaliyadda ===
 [[File:National-insurance-act-1911.jpg|thumb|200px|right|labraaliyad]]
-'''Liberalinimo''' kalmada labraal waxa ay kasoo goday kalmeda lebra ( Liberal ) waa kalmad laatin ah oo macneheedu yahay (xor) waxa ay ka dhigantahay xoriyad dhamaystiran siyaasad ahaan labraaliyadu hada waa urur ama dhaqdhaqaaq siyaasadeed oo mujtamaca ku dhaxjira. ujeedadoodu waa in laga xoreeyo mujtamaca kormeer xukuumadeed siday ahaato iyo in ay leekaataba.
+
+==== '''Liberalinimo''' : kalmada libraal waxa ay kasoo min-guurtay kalmeda lebra ( Liberal ) waa kalmad laatin ah oo macneheedu yahay (xoriyadd) waxa ay ka dhigantahay xoriyad dhamaystiran, siyaasad ahaan labraaliyadu hada waa urur ama dhaqdhaqaaq siyaasadeed oo mujtamaca ku dhaxjira. ujeedadoodu waa in shakhsiyaadka ama dadweynuhu ay xorriyad cadaalad ku dhisan ay leeyihiin,iyaadoon lagu gafaynin dastuurka iyo xeerarka,isla markaana uu qofku leeyahay xuquuqda fikirka iyo aragtida ku saleysan arrimaha kala duwan ee nolosha iyo dabeecadda. ====
 
 
 
 
-== taariikhda Liberalinimada ==
+=== Taariikhda Liberaliyadda ===
 
-
-waxa ay hore u martay lebraaliyadu afrtii qarni ee ugu danbeeyay waxa ay soo caan baxday kadib markii ay yurub ka dheceen dagaalo ku salaysan diinta. si loo joojiyo dagaaldaas ayaa waxa la abuuray lebraaliyada oo ah in xukunku uu ka soo boxo shcabka ama qofka muwadaadinka ka ah mabdana waxa keenay faylasuuf yada kala ha [[jaan jaak rosoo|Jaan Jaak Roosoo]] (Jean-Jacques Rousseau) iyo [[tomas hobis]] (Thomas Hobbes).
+=====  liberaaliyaddu (xorriyadda) waxay soo asaasantay qarnigii 18aad.fikirkan ayaa dhashay kadib markii ay yurub ka dhaceen dagaalo ku salaysan kala duwanaansho diimeed ama caqiido. si loo joojiyo dagaaldaas ayaa waxa la abuuray lebraaliyada oo ah in xukunku uu ka soo baxo shacabka ama shakhsiyaad aqoonyahano ah.mabdana waxa keenay oo curiyay faylasuufyaddi kala ahaa [[jaan jaak rosoo|Jaan Jaak Roosoo]] (Jean-Jacques Rousseau) iyo [[tomas hobis]] (Thomas Hobbes). =====
 
 
 * [http://www.jonathangullible.com/mmedia/PoL.Somali%282007.06.07%29.swf Falsafadda Xorriyada]
