*Empty MediaWiki Message*

--- a/Liska_Dagaalka_Aasiya.mw
+++ b/Liska_Dagaalka_Aasiya.mw
@@ -11,6 +11,7 @@ Liska Dagaalka [[Aasiya]] :
 * [[Dagaalki Bakistaan iyo Hindika 1947]]
 * [[Dagaalki Bakistaan iyo Hindika 1965]]
 * [[Dagaalki Bakistaan iyo Hindika 1971]]
+* [[Dagaaliki Shiinaha iyo hindika 2020]]
 * [[Bangladesh–Myanmar Dagaalki 2015]]
 * [[Dagaalkii Bangladesh]]
 * [[Iraq-Iran War]]
