*Empty MediaWiki Message*

--- a/Dagaaliki_Shiinaha_iyo_Hindika_2020.mw
+++ b/Dagaaliki_Shiinaha_iyo_Hindika_2020.mw
@@ -7,6 +7,9 @@
 
 xuduuda [[Shiinaha]] iyo xuduuda [[Hindiya]] ee gobolka lagu muransan yahay ee galwan, rabshado rabshado wata oo milatariga shaqsiyeed ay ku dhinteen dad kor u dhaafaya 50 qof, labada dhinac ee galwan ayaa u dhaw kashmir sidoo kale waxaa ku tartamay Bakistaan  ee asias doorashada ee quruumaha.
 
+{{Flag|china}}
+{{Flag|India}}
+
 
 
 
