*Empty MediaWiki Message*

--- a/Dagaaliki_Shiinaha_iyo_Hindika_2020.mw
+++ b/Dagaaliki_Shiinaha_iyo_Hindika_2020.mw
@@ -3,12 +3,14 @@
 '''Dagaaliki Shiinaha iyo Hindika 2020'''
 
 
-[[File:Kashmir Region (2020 skirmish locations).jpg|thumb|right|400px|]]
+[[File:Kashmir Region (2020 skirmish locations).jpg|thumb|right|400px|Dagaaliki Shiinaha iyo Hindika 2020 Dulka Dagallka Macduwan ]]
 
 xuduuda [[Shiinaha]] iyo xuduuda [[Hindiya]] ee gobolka lagu muransan yahay ee galwan, rabshado rabshado wata oo milatariga shaqsiyeed ay ku dhinteen dad kor u dhaafaya 50 qof, labada dhinac ee galwan ayaa u dhaw kashmir sidoo kale waxaa ku tartamay Bakistaan  ee asias doorashada ee quruumaha.
 
-{{Flag|china}}
-{{Flag|India}}
+
+
+* {{Flag|China}} 20+ kof 
+* {{Flag|India}} 40+ kof
 
 
 
