*Empty MediaWiki Message*

--- a/Liiska_Diyaaradaha_Wadanamaha.mw
+++ b/Liiska_Diyaaradaha_Wadanamaha.mw
@@ -14,7 +14,8 @@
 *{{Flag|Turkey}}                     Turkish Airlines                 
 *{{Flag|United Arab Emirates}}       Emirates           
 *{{Flag|Saudi Arabia}}               Saudia
-*{{Flag|France}}:                    Air France         
+*{{Flag|France}}:                    Air France
+*{{Flag|Djibouti}}:                  Sliver Airlines
 *{{Flag|China}}                      China Air   
 *{{Flag|Burundi}} -                  Air Burundi         
 *{{Flag|Egypt}} -                    Egypt Air                  
