--- a/AIIB.mw
+++ b/AIIB.mw
@@ -7,11 +7,18 @@
 [[File:AIIB logo.svg|thumb|right|600px|]]
 
 https://www.aiib.org/en/index.html
-
+[[FileAsian Infrastructure Investment Bank map.svg|thumb|right|500px|waddanamha Aiib ]]
 
 Bangiga Aasiya, oo ah dhisme iyo dhisme, oo saldhig u ah china oo ku taal bariga asia, oo ay ku badan yihiin wadamo badan, xubnaha kama mid ah waxaa ka mid ah UK, South Africa, iyo Brazil.
 
-
+*{{Flag|China}}:         30% 
+*{{Flag|India}} -        8% 
+*{{Flag|Russia}} -       6.6%
+*{{Flag|Germany}}        4.5%             
+*{{Flag|South Korea}}--  3.8%            
+*{{Flag|Australia}} -    3.7%           
+*{{Flag|France }}:       3.4%               
+*{{Flag|Indonesia}} -    3.4%                       
 
 
 
