--- a/AIIB.mw
+++ b/AIIB.mw
@@ -18,7 +18,10 @@ Bangiga Aasiya, oo ah dhisme iyo dhisme, oo saldhig u ah china oo ku taal bariga
 *{{Flag|South Korea}}--  3.8%            
 *{{Flag|Australia}} -    3.7%           
 *{{Flag|France }}:       3.4%               
-*{{Flag|Indonesia}} -    3.4%                       
+*{{Flag|Indonesia}} -    3.4% 
+*{{Flag|United Kingdom}} 1.4%   
+*{{Flag|Indonesia}} -    1% 
+               
 
 
 
