*Empty MediaWiki Message*

--- a/AIIB.mw
+++ b/AIIB.mw
@@ -11,16 +11,16 @@ https://www.aiib.org/en/index.html
 
 Bangiga Aasiya, oo ah dhisme iyo dhisme, oo saldhig u ah china oo ku taal bariga asia, oo ay ku badan yihiin wadamo badan, xubnaha kama mid ah waxaa ka mid ah UK, South Africa, iyo Brazil.
 
-*{{Flag|China}}:         30% 
-*{{Flag|India}} -        8% 
-*{{Flag|Russia}} -       6.6%
-*{{Flag|Germany}}        4.5%             
-*{{Flag|South Korea}}--  3.8%            
-*{{Flag|Australia}} -    3.7%           
-*{{Flag|France }}:       3.4%               
-*{{Flag|Indonesia}} -    3.4% 
-*{{Flag|United Kingdom}} 1.4%   
-*{{Flag|Indonesia}} -    1% 
+*{{Flag|China}}:                     30% 
+*{{Flag|India}} -                    8% 
+*{{Flag|Russia}} -                   6.6%
+*{{Flag|Germany}}                    4.5%             
+*{{Flag|South Korea}}--              3.8%            
+*{{Flag|Australia}} -                3.7%           
+*{{Flag|France }}:                   3.4%               
+*{{Flag|Indonesia}} -                3.4% 
+*{{Flag|United Kingdom}}             1.4%   
+*{{Flag|United Arab Emirates}} -     1% 
                
 
 
