--- a/Istanbuul.mw
+++ b/Istanbuul.mw
@@ -83,7 +83,7 @@ File:Fog-over-istanbul-skyscrapers.jpg
 
 = Xigasho =
 * [https://gezimanya.com/turkiye/istanbulda-gezilecek-yerler İstanbul'da Gezilecek Yerler]
-* Gezimanya.com
+* [https://blog.biletbayi.com/turkiye/istanbul/ İstanbul Travel Guide]
 
 ==Sidoo Kale Fiiri==
 *[[Istanbuul]]
