--- a/Ufurow.mw
+++ b/Ufurow.mw
@@ -8,10 +8,10 @@ ufurow waxaa ay ka kooban tahay laba waaxood oo kala ah '''Iftin iyo Xaawa Taako
 * Tugeerey
 * Shakar
 
-Ufurow waa degmada kaliya ah ee Baay ka tirsan ee uu soo gaaro webiga Jubba waxaana uu ka maraa dhanka loo yaqaano Gowraar waxaana ku yaalla haatan beero y sameystey Qurba Joog iyo ganacsada Gobolka ah.
+Ufurow waa degmada kaliya ah ee Baay ka tirsan ee uu soo gaaro webiga Jubba waxaana uu ka maraa dhanka loo yaqaano Gowraar waxaana ku yaalla haatan beero ay sameysteen Qurba Joogta iyo ganacsato reer Gobolka Baay ka tirsan. 
 
 Ufurow waxaa ay kaloo caan ku tahay barshada diinta Islaamka waxaana ka jira dariiqoonka qurux badan sida Saalixiya. waxaa kaloo magaalada ay caan ku tahay nabadda waxaana laga xusi karaa dadkii nabadda ku caanka baxey ee soo marey
 
 * Sheekh Ibraahim Mayloow AUN
 * Xaaji C/latiif Xaaji AUN
-* iyo Malaaq Isaaq Ibraahim
+* iyo Malaaq Isaaq Ibraahim AUN
