*Empty MediaWiki Message*

--- a/Ufurow.mw
+++ b/Ufurow.mw
@@ -1,4 +1,4 @@
-Ufurow waa Degmo ka tirsan gobolka Baay waa Degmada dhaqalaheda uuku tiirsan yahay dhanka wax soosaarka beeraha iyo dhaqashada xoolaha.
+[[Ufurow]] waa Degmo ka tirsan gobolka Baay waa Degmada dhaqalaheda uuku tiirsan yahay dhanka wax soosaarka beeraha iyo dhaqashada xoolaha.
 
 ufurow waxaa ay ka kooban tahay laba waaxood oo kala ah '''Iftin iyo Xaawa Taako''' hasse ahaate magaalada waxaa ay leedahey xaafado badan sida:
 
