--- a/Cabdicasiis.mw
+++ b/Cabdicasiis.mw
@@ -70,7 +70,7 @@
 * Xarunta Guddiga iibka Qaranka
 
 == Garoomadda Cayaaraha ==
-* Garoonka kubbadda cagta (ENG:uariisow)EX banaadir
+* Garoonka kubbadda cagta (ENG:Yariisow)EX banaadir
 * Garoonka Kubadda Kolayga (Wiish / luujino)
 * Dekaddii hore
 
