/* Garoomanka Ciyaaraha */All

--- a/Cabdicasiis.mw
+++ b/Cabdicasiis.mw
@@ -77,7 +77,7 @@
 Degmooyinka la deriska ah [[Shibis]], [[Shingaani]], kaara jimcaale waa nin caan xasan cali shiikh
 
 == Garoomanka Ciyaaraha ==
-* Garoonka Kubadda Cagta ee [[Banaadir Stadium]] Ex [[Cons Stadium]]
+* Garoonka Kubadda Cagta ee [Eng. Yariisow[Banaadir Stadium]] Ex [[Cons Stadium]]
 * Garoonka [[Kubadda Koleyga]] (Basket Ball} ee [[1 Luulyo]] [[Ex Luujino]]
 Garoonka basketbal ee LLP jenyo
 {{Degmooyinka Gobolka Banaadir}}
