Tirada, Xukunka iyo astaanta qaranka

--- a/Kenya.mw
+++ b/Kenya.mw
@@ -1,6 +1,6 @@
 {{Coord|1|16|S|36|48|E|display=title}}
 {{Infobox country
-|conventional_long_name = Jamhuuriyedda Kiinya
+|conventional_long_name = Jamhuuriyadda Kiinya
 |native_name = ''Jamhuri ya Kenya''
 |common_name = Kenya
 |image_flag = Flag of Kenya.svg
@@ -26,27 +26,27 @@
 |latd=1 |latm=16 |latNS=S |longd=36 |longm=48 |longEW=E
 |largest_city = [[Nayroobi]]
 |government_type = {{nowrap|[[Jamhuuriyad|Qaab jamhuuriyad]]}}
-|leader_title1 = Madaxweyne
+|leader_title1 = Madaxweeyne
 |leader_name1 = [[Uhuru Kenyatta]]
-|leader_title2 = Madaxwene ku xigeen
-|leader_name2 = [[Kalonzo Musyoka]]
+|leader_title2 = Madaxweeyne ku xigeen
+|leader_name2 = [[Dr. William Ruto]]
 |leader_title3 = Raiisul wasaare
 |leader_name3 = [[Raila Odinga]]
 |leader_title4 = Afhayeenka baarlamaanka
-|leader_name4 = [[Kenneth Marende]]
+|leader_name4 = [[Justin Muturi]]
 |leader_title5 = Gudoomiyeha maxkamadda sare
-|leader_name5 = [[Willy Munyoki Mutunga]]
+|leader_name5 = [[David Maraga]]
 |legislature = [[Baarlamaan]]
-|area_km2 = 580,367
-|area_sq_mi = 224,080 <!--Do not remove per [[WP:MOSNUM]]-->
+|area_km2 = 582,646 km2
+|area_sq_mi = 224,961 <!--Do not remove per [[WP:MOSNUM]]-->
 |area_rank = 47th
 |area_magnitude = 1 E11
 |percent_water = 2.3
-|population_estimate = 43,013,341
-|population_estimate_year = 2012
+|population_estimate = 52,574,000
+|population_estimate_year = 2020
 |population_estimate_rank = 31st
-|population_census = 38,610,097
-|population_census_year = 2009
+|population_census = 47,564,296
+|population_census_year = 2019
 |population_density_km2 = 67.2
 |population_density_sq_mi = 174.1 <!--Do not remove per [[WP:MOSNUM]]-->
 |population_density_rank = 140th
@@ -75,7 +75,7 @@
 |sovereignty_type = [[Xoriyad]]
 |established_event1 = Ka qaadatay [[Ingriiska]]
 |established_date1 = 12 December 1963
-|established_event2 = Waxaa laga dhigay Jamhuuriyed
+|established_event2 = Waxaa laga dhigay Jamhuuriyad
 |established_date2 = 12 December 1964
 |currency = [[shillin]]
 |currency_code = KES
@@ -99,7 +99,7 @@ Waayadii hore inta oo wadanka soo galin gumeysigii Ingriiska, wadanka gudihiisa 
 
 == Juqraafi ==
 
-Kiinya wuxuu ku fadhiyaa dhul balaaran oo gaaraayo 580,367 km2. waxay ka mid tahay wadammada waaweyn. Kiinya waa wadanka afartan iyo toddobaad oo ugu weyn [[Aduunka]].
+Kiinya wuxuu ku fadhiyaa dhul balaaran oo gaaraayo 582,646 km2. waxay ka mid tahay wadammada waaweyn. Kiinya waa wadanka afartan iyo toddobaad oo ugu weyn [[Aduunka]].
 Kiinya waxay xuduud la leedahay wadammada [[Tansaaniya]] , [[Ugaandha]] , [[Harta]] [[Fiktooriya]] , [[Soomaaliya]], [[Itoobiya]] iyo K[[konfur sudan|onfuur Suudaan]] .
 
 == Jawiga ==
@@ -109,11 +109,9 @@ Roob badan ayaa Kiinya ka da'o bilaha [[Maarso]] iyo [[Maajo]].
 Roob yarna wuxuu da'aa [[Oktoobar]] iyo [[Nofeembar]].
 xaraaradaha neh, Kuleyl ayuu ku egyahay.
 == Dhaqaale ==
-
-<gallery>
-File:Flag of Kenya.svg|Drapèu oficiau de Kenya dempuei son independéncia.
-File:Kenya African National Union.gif|Simbòl de la KANU que foguèt la fònt d'inspiracion dau drapèu oficiau de Kenya.
-File:Alternate Coat of arms of Kenya.svg|Armòrias oficialas de Kenya.
+Sanadka 2013 ilaa iyo 2017, dhaqaalaha Kenya wuxuu kubcay 5.5% waxaa lagu qiyaasi in uu lubci doono 6.1% sanadka 2019<gallery>
+File:Flag of Kenya.svg|Calanka Dalka Kenya
+File:Coat of arms of Kenya (Official).svg|Astaanta Difaaca
 </gallery>
 
 
@@ -126,9 +124,9 @@ Dadka adduunkana wey u soo dalxiisaan. Dhaqaalaha Kenya maanta wuxuu gaaray Dhaq
 * [[Mombaaso]] - 707,400 qof
 * [[Kisumu]] - 322,024 qof
 * [[Nakuru]] - 319.200 qof
-* [[Majakos]] -144,109 qof
+* [[Machakos|Majakos]] -144,109 qof
 
-1. [[Provincia Centrale (Kenya)|Centrale]]<br />
+1. [[Gobolka Dhexe (Kenya)|Centrale]]<br />
 2. [[Provincia Costiera|Costiera]]<br />
 3. [[Provincia Orientale (Kenya)|Orientale]]<br />
 5. [[Provincia Nordorientale (Kenya)|Nordorientale]]<br />
