*Empty MediaWiki Message*

--- a/Liska_Somaliland_Milyan_%2F_Bilyan.mw
+++ b/Liska_Somaliland_Milyan_%2F_Bilyan.mw
@@ -1,6 +1,6 @@
 '''Liska Somaliland Milyan / Bilyan'''
 
-
+I love my Somali brothers and sisters 
 
 {{Flag|Somaliland}}
 
@@ -23,7 +23,7 @@ Millionaire young age
 6. [[Ina Afdiinle ]]-Waxay ka mid yihiin dariiqooyinka hawada ee Suhura, ee qaadka ugu weyn ee Somaliland, waxay leedahay hudheelo badan oo Hargeysa ku yaal [[780Million]] USD.
 
 7.[[Abdikarim Mohamed Eid ]]
-CEO TELESOM COMPANY MOST SHARE COMPANY MORE THAN 80% HE IS NET WORTH [[650MILLION]] USD.
+HE IS THE FOUNDER AND CEO OF TELESOM. HE HOLDS THE MOST SHARES IN THE COMPONY WITH 80%, HIS NET WORTH IS $950 MILLION.
 
 8.Dheer Dheero - Mid ka mid ah suuqyada waaweyn ee dhoofiya xoolaha, soo dejiya alaabo kale, waxay leedahay hudheelo badan oo ka mid ah Somaliland.
 [[430Million ]]USD
