*Empty MediaWiki Message*

--- a/Liska_Somaliland_Milyan_%2F_Bilyan.mw
+++ b/Liska_Somaliland_Milyan_%2F_Bilyan.mw
@@ -4,7 +4,7 @@ I love my Somali brothers and sisters
 
 {{Flag|Somaliland}}
 
-1."JAAMA OOMAR"  WAA MULKIILAHA SHIRKADDA AFRICAN EXPRESS, WAA MULKIILAHA SIDOO KALE OOMAR TRADING GROUP OF COMPANIES, HANTIDA AMA CAPITAL AMOUNT KIISU WAXAY GAADHAYSAA "1.4 BILLION"
+1. Zakaria Mohamed is the CEO and founder of Zakaria inc he has a net worth of $6 Billion. He founded Zakaria inc in 2005. His company specializes in weaponry and real estate.
 
 2..[[Mohamed Yusuf]] oo ah CEO of Invicta Capital Ltd oo ah shirkad kor u dhaaftay 1.4 bilyan oo ah maal-gashi maal-gashi tan iyo 2001-dii, sidoo kale saamileyaal badan oo ah Shirkadda Prime Resources ayaa ah shirkad saliideed oo ka shaqaysa Somaliland.
 
