*Empty MediaWiki Message*

--- a/Liska_Somaliland_Milyan_%2F_Bilyan.mw
+++ b/Liska_Somaliland_Milyan_%2F_Bilyan.mw
@@ -6,34 +6,36 @@ I love my Somali brothers and sisters
 
 1. Zakaria Mohamed is the CEO and founder of Zakaria inc he has a net worth of $6 Billion. He founded Zakaria inc in 2005. His company specializes in weaponry and real estate.
 
-2..[[Mohamed Yusuf]] oo ah CEO of Invicta Capital Ltd oo ah shirkad kor u dhaaftay 1.4 bilyan oo ah maal-gashi maal-gashi tan iyo 2001-dii, sidoo kale saamileyaal badan oo ah Shirkadda Prime Resources ayaa ah shirkad saliideed oo ka shaqaysa Somaliland.
+2."JAAMA OOMAR" WAA MULKIILAHA SHIRKADDA AFRICAN EXPRESS, WAA MULKIILAHA SIDOO KALE OOMAR TRADING GROUP OF COMPANIES, HANTIDA AMA CAPITAL AMOUNT KIISU WAXAY GAADHAYSAA "1.4 BILLION"
 
-3.Dabahshiil -Waxay ka mid tahay shirkadaha caalamiga ah ee xawaaladaha lacagaha ee Afrika.
+3..[[Mohamed Yusuf]] oo ah CEO of Invicta Capital Ltd oo ah shirkad kor u dhaaftay 1.4 bilyan oo ah maal-gashi maal-gashi tan iyo 2001-dii, sidoo kale saamileyaal badan oo ah Shirkadda Prime Resources ayaa ah shirkad saliideed oo ka shaqaysa Somaliland.
+
+4.Dabahshiil -Waxay ka mid tahay shirkadaha caalamiga ah ee xawaaladaha lacagaha ee Afrika.
 More Than [[1Billion]] USD
 
-4." Mohamed Sa'ed Geedi, Waa mulkiilaha Shirkadda Sigaarka Royal Business MSG, sidoo kale Waa mulkiilaha Shirkadda "SOMCABLE" CAPITAL'ka shirkadihiisa & guud ahaan hantida maalqabeenkani waa 940 MILLION USD ah.
+5." Mohamed Sa'ed Geedi, Waa mulkiilaha Shirkadda Sigaarka Royal Business MSG, sidoo kale Waa mulkiilaha Shirkadda "SOMCABLE" CAPITAL'ka shirkadihiisa & guud ahaan hantida maalqabeenkani waa 940 MILLION USD ah.
 
 
 
-5. [[Omar Ahmed Aidid Adar]]
+6. [[Omar Ahmed Aidid Adar]]
 He Is Nickname Golden Boy 
 Millionaire young age 
 [[860Million]] USD.
 
-6. [[Ina Afdiinle ]]-Waxay ka mid yihiin dariiqooyinka hawada ee Suhura, ee qaadka ugu weyn ee Somaliland, waxay leedahay hudheelo badan oo Hargeysa ku yaal [[780Million]] USD.
+7. [[Ina Afdiinle ]]-Waxay ka mid yihiin dariiqooyinka hawada ee Suhura, ee qaadka ugu weyn ee Somaliland, waxay leedahay hudheelo badan oo Hargeysa ku yaal [[780Million]] USD.
 
-7.[[Abdikarim Mohamed Eid ]]
+8.[[Abdikarim Mohamed Eid ]]
 HE IS THE FOUNDER AND CEO OF TELESOM. HE HOLDS THE MOST SHARES IN THE COMPONY WITH 80%, HIS NET WORTH IS $950 MILLION.
 
-8.Dheer Dheero - Mid ka mid ah suuqyada waaweyn ee dhoofiya xoolaha, soo dejiya alaabo kale, waxay leedahay hudheelo badan oo ka mid ah Somaliland.
+9.Dheer Dheero - Mid ka mid ah suuqyada waaweyn ee dhoofiya xoolaha, soo dejiya alaabo kale, waxay leedahay hudheelo badan oo ka mid ah Somaliland.
 [[430Million ]]USD
 
-9. Shirkadda Omar
+10. Shirkadda Omar
 Shirkada Omaar Company waa  Shirkadaha ugu waa weyn ee ka shaqeeya Djibouti iyo Somaliland 
 waana shirkad balaadhan 
 [[397Million 
 
-10.[[Amina Hersi Moghe]] - Mulkiilaha mashruucyo badan oo malaayiin ah oo ku yaalla Uganda sida Xarunta Oasis
+11.[[Amina Hersi Moghe]] - Mulkiilaha mashruucyo badan oo malaayiin ah oo ku yaalla Uganda sida Xarunta Oasis
 340Million USD.
 
 == sido kale fiiri ==
