*Empty MediaWiki Message*

--- a/Saqiiro.mw
+++ b/Saqiiro.mw
@@ -1,9 +1,2 @@
-'''Saqiiro''' waa [[deegaan]] ku yaalo [[Mudug|Gobolka Mudug]] ee baetamaha Soomaaliya.waana deegaan aad u soo kobcayo.
-
-waxa uu hoos tagaa magaalada Baxdo oo ka mid ah magaalooyinka uu maamulo maamulka Galmudug.
-[[File:Un-somalia.png|thumb|right|400px|]]
-Saqiiro waxaa dega beesha '''Reer xaaji Saleebaan'''.
-
-.
-
+'''Saqiiro''' waa [[deegaan]] ku yaalo [[Mudug|Gobolka Mudug]] ee bartamaha Soomaaliya.
 {{Magaalooyinka Gobolka Mudug}}
