--- a/Cüneyt_Çakır.mw
+++ b/Cüneyt_Çakır.mw
@@ -17,7 +17,7 @@
 | confederation1      = [[FIFA International Referees List|FIFA listed]]
 | internationalrole1  = Referee
 }}
-'''Cüneyt Çakır''' waa Garsoore-Banooni oo u dhashay wadanka [[Turkiga]] wax uuna ka mid yahay garsoorayaasha ugh heerka sareeya UEFA iyo FIFA sida joogtada ahna U dhex-dhexaadiyo ciyaaraha muhiimka ah.
+Judeyd shakir waa Garsoore-Banooni oo u dhashay wadanka [[Turkiga]] wax uuna ka mid yahay garsoorayaasha ugh heerka sareeya UEFA iyo FIFA sida joogtada ahna U dhex-dhexaadiyo ciyaaraha muhiimka ah.waxaa lagu xusuustaa ciyaartii cajiibka aheyd ee ka dhacdey unfield udhexeysay liverpool iyo Barcelona 
 
 
 [[File:AUT vs. WAL 2016-10-06 (081).jpg|400px|thumb|right|]]
