--- a/Tuni.mw
+++ b/Tuni.mw
@@ -1,2 +1,2 @@
-'''Tuni''' waa Beel ka mid ah beel weynta [[Digil iyo Mirifle]].Beeshaan waxey degtaa laga soo bilaabo Gobolada kala ah [[Banaadir]], [[Shabeellaha Hoose]], [[Jubbada Dhexe]] iyo [[Jubbada Hoose]]. Golweyn ilaa goobweyn 
+'''Tuni''' waa Beel ka mid ah beelaha laga tira badan yahay .5 [[Digil iyo Mirifle]].Beeshaan waxey degtaa laga soo bilaabo Gobolada kala ah [[Banaadir]], [[Shabeellaha Hoose]], [[Jubbada Dhexe]] iyo [[Jubbada Hoose]]. Golweyn ilaa goobweyn 
 Tuni waa Beel ka mid ah beel weynta Digil iyo Mirifle.Beeshaan waxa ay degtaa laga soo bilaabo Gobolada kala ah Banaadir, Shabeellaha Hoose, Jubbada Dhexe
