*Empty MediaWiki Message*

--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -1,7 +1,17 @@
-{{nutshell|Qoraalka halkan ku jira ma ahan mid sax ah oo lagu kalsoonaan karo.}}
-{{agoon}} 
-{{gumud}}
-Cali Maxamuud Samatar oo Cali Gurey ku magac dheeraa, waxaa uu ka mid ahaa Gabayahanadii raca hore ee Hanaqaaday Rubucii hore ee Qarnigii 20-aad, Wuxuu ahaa Gabyaaga keliya ee gabay ka tiriyay Xarafka (Y) oo ah xarafka ugu adag ee gabay laga tiriyo, Gabyaagu wuxuu ka soo jeeday Gobolka [[Bari]] Beel ahaanna Wuxuu ka dhashay Beesha [[Dishiishe]] [[Daarood]]. Wuxuu ku dhashay Magaalada ([[Boosaaso]]).
+{{Infobox person
+| name        = Cali Maxamuud Samantar (Cali Gurey) </br> Ali Mohamud Samanter<br> علي محمود السمنتر
+| image       = 
+| imagesize   = 190px
+| caption     = 
+| birth_date  = 
+| birth_place = [[Soomaaliya]]
+| occupation  = [[Gabay]]aa, [[halabuur]] [[hogaamiye]]
+| ethnicity   = [[Dadka Soomaalida|Soomaali]]
+| nationality = 
+| children    = 
+| title       = Hogaamiyaha Maamulkii Boosaaso
+}}
+'''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hogaamiye, Halabuur Iyo Hogaamiyihii Maamulkii Boosaaso. Wuxuu ahaa Halabuurka keliya ee ka gabyay Xaraf (Y) oo lagu tiriyo inuu yahay midka ugu adag Af-soomaaliga oo gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], [[Daarood]]. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Gobolka Bari. 
 
 Wuxu mariyey gabaygan guubaabo iyo habaar ah oo uu Daraawiish iyo Sayid Maxamed ku Aweytiyayo, 
 Wuxu gabaygu ku yimid “[[Sayid Maxamed Cabdulle Xassan]] ayaa aftin u diray oo wuxu ku yiri Xarunta kaalay "Cali Gurayow", Muddo kaddibna wuxu tiriyey gabaygaan oo uu ka tiriyey xarafka Ya’da (Y) oo ah xarafka ugu yar xarfaha ay Soomaalidu ka gabaydo,     Wuxu yiri:
