Noqay bedelaadka 203073 ee sameeyay  [[Special:Contributions/Kaafi Somali|Kaafi Somali]] ([[User talk:Kaafi Somali|hadal]])

--- a/Cabdicasiis.mw
+++ b/Cabdicasiis.mw
@@ -43,7 +43,7 @@
 | website             = [http://www.mogadishucity.net/dc-contacts/page/2/ Mareegta internetka]
 | footnotes           = 
 }}
-'''Cabdicasiis''' waa degmo ka tirsan degmooyinka Gobolka banaadir ee magaaladda [[Muqdisho]] waxeyna leedahay xeeb aad u dheer oo dhererkedu gaarayo 3333KM laba jibaaran  iyo sido kale waxaa ku yaala dekedii hore ee Muqdisho.
+'''Cabdicasiis''' waa degmo ka tirsan degmooyinka Gobolka banaadir ee magaaladda [[Muqdisho]] waxeyna leedahay xeeb aad u dheer oo dhererkedu gaarayo 3333KM iyo sido kale waxaa ku yaala dekedii hore ee Muqdisho.
 
 == Masaajida ==
 * Masjid Jaamaca
