*Empty MediaWiki Message*

--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -5,62 +5,62 @@
 | caption     = 
 | birth_date  = 
 | birth_place = [[Soomaaliya]]
-| occupation  = [[Gabay]]aa, [[halabuur]] [[hogaamiye]]
+| occupation  = [[Gabay]]aa, [[halabuur]] [[hoggaamiye]]
 | ethnicity   = [[Dadka Soomaalida|Soomaali]]
 | nationality = 
 | children    = 
 | title       = Hogaamiyaha Maamulkii Boosaaso
 }}
-'''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hogaamiye, Halabuur Iyo Hogaamiyihii Maamulkii Boosaaso. Wuxuu ahaa Halabuurka keliya ee ka gabyay Xaraf (Y) oo lagu tiriyo inuu yahay midka ugu adag Af-soomaaliga oo gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], [[Daarood]]. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Gobolka Bari. 
+'''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Halabuur iyo Hoggaamiyihii Maamulkii Boosaaso ka talin jiray ka hor dowladnimada. Wuxuu dagaalo la galay Daraawiishtii Sayidka. Wuxuu ahaa Halabuurka keliya ee ka gabyay Xaraf (Y) oo lagu tiriyo inuu yahay midka ugu adag Af-soomaaliga oo gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], [[Daarood]]. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Gobolka Bari. 
 
 Wuxu mariyey gabaygan guubaabo iyo habaar ah oo uu Daraawiish iyo Sayid Maxamed ku Aweytiyayo, 
 Wuxu gabaygu ku yimid “[[Sayid Maxamed Cabdulle Xassan]] ayaa aftin u diray oo wuxu ku yiri Xarunta kaalay "Cali Gurayow", Muddo kaddibna wuxu tiriyey gabaygaan oo uu ka tiriyey xarafka Ya’da (Y) oo ah xarafka ugu yar xarfaha ay Soomaalidu ka gabaydo,     Wuxu yiri:
 
-☆ Waataan af gabay yeerin jirey, yarow ahaantiiye.
+* Waataan af gabay yeerin jirey, yarow ahaantiiye.
 
-☆ Uma yoomo hawd yaalaley hays, nin yuurura ee'.
+* Uma yoomo hawd yaalaley hays, nin yuurura ee'.
 
-☆ Ma yakfiyo yaloonkoo cidla ah, yeris nin jiifaaye.
+* Ma yakfiyo yaloonkoo cidla ah, yeris nin jiifaaye.
 
-☆ Isba Nebi Yacquub bacdal ya’si buu, Yaasafaa yiriyee.
+* Isba Nebi Yacquub bacdal ya’si buu, Yaasafaa yiriyee.
 
-☆ Allena u yeel ducaduu yu’doo, yoomayoo kacay ee.
+* Allena u yeel ducaduu yu’doo, yoomayoo kacay ee.
 
-☆ Suu rabayna Ilaahay u yeel, samirki Ayuube.
+* Suu rabayna Ilaahay u yeel, samirki Ayuube.
 
-☆ Tan iyo Yuusuf weliyaa jireyee, yaab kanaa dhigayee.
+* Tan iyo Yuusuf weliyaa jireyee, yaab kanaa dhigayee.
 
-☆ Yaa ayuha nebaa laga galiyo, Bariyo Yaasiine!
+* Yaa ayuha nebaa laga galiyo, Bariyo Yaasiine!
 
-☆ Waxba yaan wadaad Doy ka yimid, orannin yaabuuye.
+* Waxba yaan wadaad Doy ka yimid, orannin yaabuuye.
 
-☆ Waxba yuu i siin qaalmuhuu, soo yahoobiyaye.
+* Waxba yuu i siin qaalmuhuu, soo yahoobiyaye.
 
-☆ Nin qabiiladiisii yu’ tidhi, yuu anay rabine.
+* Nin qabiiladiisii yu’ tidhi, yuu anay rabine.
 
-☆ Yuufuuna dhaha taladiisu waa, yuux an roob di’ine.
+* Yuufuuna dhaha taladiisu waa, yuux an roob di’ine.
 
-☆ Nin suldaan yuleeciis na baday, yaahu  baan idhiye.
+* Nin suldaan yuleeciis na baday, yaahu  baan idhiye.
 
-☆ Col ha yedo yaraysoo ha gasho, ciidan yuu heline.
+* Col ha yedo yaraysoo ha gasho, ciidan yuu heline.
 
-☆ Kun yagoola guutooyin yugan, rayfal wada yeesa.
+* Kun yagoola guutooyin yugan, rayfal wada yeesa.
 
-☆ Nin u yeeray yaayuunka bari, yeel ma buuxsado e.
+* Nin u yeeray yaayuunka bari, yeel ma buuxsado e.
 
-☆ Libin kama yamsado niman dagaal, yeelmuhuu bixinne.
+* Libin kama yamsado niman dagaal, yeelmuhuu bixinne.
 
-☆ Mar haddaad yedduu jeedisaan, yeekfiruu noqonne.
+* Mar haddaad yedduu jeedisaan, yeekfiruu noqonne.
 
-☆ Inuu yahay walaal col isu yimid, waa yaqiin rumahe.
+* Inuu yahay walaal col isu yimid, waa yaqiin rumahe.
 
-☆ Goortii la yiri baad qisada, yaab u dhimataaye.
+* Goortii la yiri baad qisada, yaab u dhimataaye.
 
-☆ Dadku wuxuu u kala yaacayaa, yaarahoo da’aye!
+* Dadku wuxuu u kala yaacayaa, yaarahoo da’aye!
 
-☆ Xareed yibal baxeed waa intuu, yadanku buuxaaye.
+* Xareed yibal baxeed waa intuu, yadanku buuxaaye.
 
-☆ Wax la yicib wiyeer maalintey, yaabatiin tahaye!
+* Wax la yicib wiyeer maalintey, yaabatiin tahaye!
 
 _____________
 
