--- a/Cabdicasiis.mw
+++ b/Cabdicasiis.mw
@@ -43,7 +43,7 @@
 | website             = [http://www.mogadishucity.net/dc-contacts/page/2/ Mareegta internetka]
 | footnotes           = 
 }}
-'''Cabdicasiis''' waa degmo ka tirsan degmooyinka Gobolka banaadir ee magaaladda [[Muqdisho]] waxeyna leedahay xeeb aad u dheer oo dhererkedu gaarayo 3333KM iyo sido kale waxaa ku yaala dekedii hore ee Muqdisho.
+'''Cabdicasiis''' waa degmo ka tirsan degmooyinka magaaladda [[Muqdisho]] waxeyna xeeb aad u dheer iyo sido kale waxaa ku yaala dekedii hore ee Muqdisho.
 
 == Masaajida ==
 * Masjid Jaamaca
@@ -70,14 +70,14 @@
 * Xarunta Guddiga iibka Qaranka
 
 == Garoomadda Cayaaraha ==
-* Garoonka kubbadda cagta (ENG:Yariisow)EX banaadir
+* Garoonka kubbadda cagta (ENG:uariisow)EX banaadir
 * Garoonka Kubadda Kolayga (Wiish / luujino)
 * Dekaddii hore
 
 Degmooyinka la deriska ah [[Shibis]], [[Shingaani]], kaara jimcaale waa nin caan xasan cali shiikh
 
 == Garoomanka Ciyaaraha ==
-* Garoonka Kubadda Cagta ee [Eng. Yariisow[Banaadir Stadium]] Ex [[Cons Stadium]]
+* Garoonka Kubadda Cagta ee [[Banaadir Stadium]] Ex [[Cons Stadium]]
 * Garoonka [[Kubadda Koleyga]] (Basket Ball} ee [[1 Luulyo]] [[Ex Luujino]]
 Garoonka basketbal ee LLP jenyo
 {{Degmooyinka Gobolka Banaadir}}
