*Empty MediaWiki Message*

--- a/Template:Lang-hr.mw
+++ b/Template:Lang-hr.mw
@@ -1,2 +1,2 @@
 {{Language with name|hr|Af kroati |{{{1}}}}}<noinclude>
-[[Category:Lang-x templates|kmhr]</noinclude>
+[[Category:Lang-x templates|kmhr]]</noinclude>
