*Empty MediaWiki Message*

--- a/Template:Lang-ti.mw
+++ b/Template:Lang-ti.mw
@@ -1,3 +1,2 @@
-{{Language with name|it|Af-Tigrinya|{{{1}}}|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|ti|Af Tigrinya |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|ti]]</noinclude>
