*Empty MediaWiki Message*

--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -11,7 +11,7 @@
 | children    = 
 | title       = Hogaamiyaha Maamulkii Boosaaso
 }}
-'''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Halabuur iyo Hoggaamiyihii Maamulkii Boosaaso ka talin jiray ka hor dowladnimada. Wuxuu dagaalo la galay Daraawiishtii Sayidka. Wuxuu ahaa Halabuurka keliya ee ka gabyay Xarafka (Y) oo lagu tiriyo inuu yahay midka ugu adag Af-soomaaliga ee gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], ee [[Daarood]]ka. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Woqooyi Bari Soomaaliya. 
+'''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Halabuur,  Gabyaa iyo Hoggaamiyihii Maamulkii Boosaaso ka talin jiray ka hor dowladnimada. Wuxuu dagaalo la galay Daraawiishtii Sayidka. Wuxuu ahaa Halabuurka keliya ee ka gabyay Xarafka (Y) oo lagu tiriyo inuu yahay midka ugu adag Af-soomaaliga ee gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], ee [[Daarood]]ka. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Woqooyi Bari Soomaaliya. 
 
 Wuxu mariyey gabaygan guubaabo iyo habaar ah oo uu Daraawiish iyo Sayid Maxamed ku Aweytiyayo, 
 Wuxu gabaygu ku yimid “[[Sayid Maxamed Cabdulle Xassan]] ayaa aftin u diray oo wuxu ku yiri Xarunta kaalay "Cali Gurayow", Muddo kaddibna wuxu tiriyey gabaygaan oo uu ka tiriyey xarafka Ya’da (Y) oo ah xarafka ugu yar xarfaha ay Soomaalidu ka gabaydo,     Wuxu yiri:
