--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -13,8 +13,17 @@
 }}
 '''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Halabuur, Dagaalyahan, Gabyaa iyo Hoggaamiyihii [[Saldanadii Calmiskaad]] ee ka talin jirtay Magalaada [[Boosaaso]] Iyo buuraleyda [[Calmiskaad]]. Wuxuu dagaalo la galay Gumaystihii Talyaaniga. Dagaalada Cali Gurey iyo Talyaaniga waxaa maqlay [[Sayid Maxamed Cabdulle Xassan|Sayidka]] wuxuuna Sayidku u diray ergo dhanka Cali Gurey isaga oo doonaayey inuu gacan saar la yeesho Cali Gurey, hase yeeshee Cali Gurey wuu diiday arrinkaas. Cali Wuxuu ahaa Halabuurka keliya ee ka gabyay Xarafka (Y) oo lagu tiriyo inuu yahay midka ugu yar, uguna adag Af-soomaaliga ee gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], ee [[Daarood]]ka. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Woqooyi Bari Soomaaliya. 
 
-Wuxu mariyey gabaygan guubaabo iyo habaar ah oo uu Daraawiish iyo Sayid Maxamed ku Aweytiyayo, 
-Wuxu gabaygu ku yimid “[[Sayid Maxamed Cabdulle Xassan]] ayaa aftin u diray oo wuxu ku yiri Xarunta kaalay "Cali Gurayow", Muddo kaddibna wuxu tiriyey gabaygaan oo uu ka tiriyey xarafka Ya’da (Y) oo ah xarafka ugu yar xarfaha ay Soomaalidu ka gabaydo,     Wuxu yiri:
+==Hordhac==
+Sayidka ayaa maqalay Cali Gurey inaysan isku sal banaanayn talyaanigii dhowr goorna ay isku dheceen oo dagaalo lagu ololay ay isla galeen. Markaas ayuu sayidku ergo usoo diray Cali Gurey fariina usoo faray in uu siin doono Geel cas-cas oo gaaraya 500 oo neef.
+
+Ugaas Cali gurey ma ahayn nin la dhacsan qaabka uu sayidku wax u wado iyo geela uu xalaalaystay ee dadka soomaliyeed qaarkood laga dhici jiray oo uu sayidku ku caan baxay oraahdii caanka ahyd ee oranaysay:
+ 
+(Dhaqaaleeya dhaha geelu wey naga dhexeeyaa e.)
+
+Cali gurey ergadii ayuu u yeeray si fiicana u casumay kadibna gabaygan caanka noqday ayuu tiriyey oo uu ugu quus gooyay sayidka in uusan usoo socon uuna yahay nin maal aduun ku fadhiya Saldano balaarana haysta.
+
+Wuxuu yidhi;
+
 
 * Waataan af gabay yeerin jirey, yarow ahaantiiye.
 
@@ -62,6 +71,9 @@ Wuxu gabaygu ku yimid “[[Sayid Maxamed Cabdulle Xassan]] ayaa aftin u diray oo
 
 * Wax la yicib wiyeer maalintey, yaabatiin tahaye!
 
+_____________
+
+Waxaa laga qoray Xaaji Dharaar, Sannadkii 1964-tii [[Muqdisho]] [[Soomaaliya]]
 _____________
 
 Waxaa laga qoray Xaaji Dharaar, Sannadkii 1964-tii [[Muqdisho]] [[Soomaaliya]]
