*Empty MediaWiki Message*

--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -78,4 +78,4 @@ Wuxuu yiri;
 _____________
 
 Waxaa laga qoray Xaaji Dharaar, Sannadkii 1964-tii [[Muqdisho]] [[Soomaaliya]]
-_____________
+[[Category:Taariikhda Soomaaliya]]
