Noqay bedelaadka 203033 ee sameeyay  [[Special:Contributions/213.233.104.138|213.233.104.138]] ([[User talk:213.233.104.138|hadal]])

--- a/Facaye.mw
+++ b/Facaye.mw
@@ -6,10 +6,10 @@
 |region1 =        {{flagcountry|Somalia}}</br>{{flagcountry|Ethiopia}}
 |langs = [[Af-Soomaali]] iyo [[Carabi|Af Carabi]]
 |rels = [[Sunni Islam]], [[Suufi]], [[Salafiya]]
-|related-c = [[Majeerteen]], [[Leelkase]], [[warsangali]], [[Dishiishe]],[[Dhulbahante]] iyo kuwo kale oo bdan [[darod]]  ah [[Dadka Soomaalida]]
+|related-c = [[Mareexaan]], [[Majeerteen]], [[Leelkase]], [[warsangali]], iyo kuwo kale oo [[Dadka Soomaalida]]
 }}
 
-Waa beel kamid ah qabiilaha somaliyeed ee dagan koofurta somalia qaasatan gobolka [[Jubbada Hoose]] iyo gobolka  [[Jubbada Dhexe]], sidookale waa beel kamid ah beel weynta daarood oo ah beel dagta bariga africa. wana beel si wayn loga qadariyo koonfurta iyo bartamaha Somalia khasatan jubooyinka. waxay beshu katirdantahy  belwaynta [[Daarood|Darood]] gaar ahaan [[harti]] gaar ahaan Axmed harti{[[Dishiishe|mucase]]}  waxayna u kala baxaan [[Mooracase|AxmedHarti]] 6 lafood oo somalida Sharaf ku leh{facaye, akisho, dishishe, gabtaanle ,tiinle, maganlabe}
+Waa beel kamid ah qabiilaha somaliyeed ee dagan koofurta somalia qaasatan gobolka [[Jubbada Hoose]] iyo gobolka  [[Jubbada Dhexe]], sidookale waa beel kamid ah beel weynta daarood oo ah beel dagta bariga africa.
 
 ==Sidoo kale fiiri==
 *[[Soomaali|Beelaha Soomaalida]]
