*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,4 +1,6 @@
-'''Begedi''' / Bagadi Sido kale loogu waco (mucajab) wa beel hoosaad kamid ah beelweynta [[Digil iyo Mirifle]] gaar ahaan Digil Begedi wuxuu uqaybsamaa :
+
+[[File:Bagedi.jpg | thumb | 220x124px | right | ]]
+Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab) wa beel hoosaad kamid ah beelwaynta [[Digil iyo Mirifle]] gaar ahaan Digil Begedi wuxuu uqaybsamaa :
 
 1- [[Abaasaad]] ( Dheegle iyo Carfaale )
 
@@ -11,12 +13,10 @@
 5- [[Quraabane]].
 
 
-Waa dad xoolo dhaqato  iyo beeraley ah . Waxay degaan [[Afooye]] , [[Awdheegle]], [[Mubarak]] , [[bariire]] , [[Cumur beere (tuulo)|Cumar beere]] , [[Daaru Salaam (tuulo)|Daaru salaam]], [[Buulo mareer]] , [[Qoryooleey]] [[Waabari]] iyo [[Marko]]. 
+Waa dad xoolo dhaqato  iyo beeraley ah . Waxay degaan [[Afooye]] , [[Awdheegle]], [[Mubarak]] , [[bariire]] , [[Cumur beere (tuulo)|Cumar beere]] , [[Daaru Salaam (tuulo)|Daaru salaam]], [[Buulo mareer]] , [[Qoryooleey]] , Baraawe, [[Waabari]] iyo [[Marko]]. 
 
 Sido kale waxay degaan koonfurta [[Yemen]] sida [[Xadramoot]]. 
-
-
-Tirokoob lagu sameeyay 1960ki waxa lagu sheegay beesha Begedi /Bagadi in ay yihiin 30.000 oo ruux ah oo kuwaas intoodi badan degan gobolka shabeaha hoose iyo Banaadir.
+{{ }}
 
 Beeshu waxay taariiq dheer kuleeyihiin ladagalamki gumaystuhu talyaaniga iyo ingariiska e dalka haystay .
 Waa beel lagu yaqaano nabada , diris wanaaga iyo xiriir wanaagsan kala dhaxeeyo beelaha kale ee Soomaliyeed.
