--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -11,7 +11,7 @@
 | children    = 
 | title       = Hoggaamiyaha [[Saldanada Calmiskaad]]
 }}
-'''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Halabuur, Dagaalyahan, Gabyaa iyo Hoggaamiyihii [[Saldanadii Calmiskaad]] ee ka talin jirtay Magalaada [[Boosaaso]] Iyo buuraleyda [[Calmiskaad]]. Wuxuu dagaalo la galay Gumaystihii Talyaaniga. Dagaalada Cali Gurey iyo Talyaaniga waxaa maqlay [[Sayid Maxamed Cabdulle Xassan|Sayidka]] wuxuuna Sayidku u diray ergo dhanka Cali Gurey isaga oo doonaayey inuu gacan saar la yeesho Cali Gurey, hase yeeshee Cali Gurey wuu diiday arrinkaas. Cali Wuxuu ahaa Halabuurka keliya ee ka gabyay Xarafka (Y) oo lagu tiriyo inuu yahay midka ugu yar, uguna adag Af-soomaaliga ee gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], ee [[Daarood]]ka. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Woqooyi Bari Soomaaliya.
+'''Cali Maxamuud Samatar''' oo Cali Gurey ku magac dheeraa, wuxuu  ahaa Hoggaamiye, Halabuur, Dagaalyahan, Gabyaa iyo Hoggaamiyihii [[Saldanada Calmiskaad]] ee ka talin jirtay Magalaada [[Boosaaso]] Iyo buuraleyda [[Calmiskaad]]. Wuxuu dagaalo la galay Gumaystihii Talyaaniga. Dagaalada Cali Gurey iyo Talyaaniga waxaa maqlay [[Sayid Maxamed Cabdulle Xassan|Sayidka]] wuxuuna Sayidku u diray ergo dhanka Cali Gurey isaga oo doonaayey inuu gacan saar la yeesho Cali Gurey, hase yeeshee Cali Gurey wuu diiday arrinkaas. Cali Wuxuu ahaa Halabuurka keliya ee ka gabyay Xarafka (Y) oo lagu tiriyo inuu yahay midka ugu yar, uguna adag Af-soomaaliga ee gabay laga curin karo. Wuxuu ka dhashay qoyska Ugaastooyada beesha [[Dishiishe]], ee [[Daarood]]ka. Wuxuu ku dhashay Magaalada [[Boosaaso]] ee Woqooyi Bari Soomaaliya.
 
 ==Taariikh==
 Weedh abwaan soomaaliyeed ku sifeeyay Cali Gurey".
