*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,5 +1,5 @@
 
-[[File:Bagedi.jpg | thumb | 220x124px | right | ]]
+[[File:Shabeelada hoose, Awdheegle.jpg | thumb | 220x124px | right]]
 Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab) wa beel hoosaad kamid ah beelwaynta [[Digil iyo Mirifle]] gaar ahaan Digil Begedi wuxuu uqaybsamaa :
 
 1- [[Abaasaad]] ( Dheegle iyo Carfaale )
@@ -14,6 +14,7 @@ Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab) wa beel hoosaad kami
 
 
 Waa dad xoolo dhaqato  iyo beeraley ah . Waxay degaan [[Afooye]] , [[Awdheegle]], [[Mubarak]] , [[bariire]] , [[Cumur beere (tuulo)|Cumar beere]] , [[Daaru Salaam (tuulo)|Daaru salaam]], [[Buulo mareer]] , [[Qoryooleey]] , Baraawe, [[Waabari]] iyo [[Marko]]. 
+[[File:Beeraha Awdheegle.jpg | thumb | 220x124px | right]]
 
 Sido kale waxay degaan koonfurta [[Yemen]] sida [[Xadramoot]]. 
 {{ }}
