*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,4 +1,4 @@
-
+[[File:Begedi Clansman.jpg | thumb | 220x124px | right]]
 [[File:Shabeelada hoose, Awdheegle.jpg | thumb | 220x124px | right]]
 Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab) wa beel hoosaad kamid ah beelwaynta [[Digil iyo Mirifle]] gaar ahaan Digil Begedi wuxuu uqaybsamaa :
 
@@ -32,6 +32,7 @@ MADAXDA SARE EE BEESHU:
 
 3-Sh. Abdullahi Begedi oo kaalin wayn kasoo qaatay siyaasada Somaliya.
 Wuxuu ahaa xubnaha uga sareeya maxkamada sare dowlada Somaliya xiligii dowlada rayidka ee kahoraysay kacaanka isagoona ahaa ninkii aas aasay xisbigii (HDM 1943).
+[[File:Sheikh Abdullahi Begedi.jpg | thumb | 220x124px | right]]
 
 4- Abuukar Sayid Ali oo looyaqan Jaajuumow fanaanka wayn.
 
